[package]
name = "client-leptos"
description = "Leptos SPA web client, which will run in the Tauri web view"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.2", features = ["stable"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
reqwest = { version = "0.11.16", features = ["json"] }
common = { path = "../common" }
anyhow = "1.0.70"
