[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
ammonia = "3.3.0"
anyhow = "1.0.69"
common = { path = "../common" }
base64 = "0.21.0"
chrono = "0.4.23"
dotenvy = "0.15.6"
hmac = "0.12.1"
minify-html = "0.9"
reqwest = { version = "0.11.14", features = ["json"] }
rustls = "0.20.8"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_urlencoded = "0.7.1"
sha2 = "0.10.6"
sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls", "postgres", "uuid", "chrono", "offline" ] }
tokio = "1.25.0"
rand = { version = "0.8.5", features = ["std_rng"] }
uuid = { version = "1.3.0", features = ["v4"] }
actix-cors = "0.6.4"
http = "0.2.9"
